Feature sequilize configuration time zone
